--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@ html, body {
     /* Layout interno de la tarjeta */
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centra el contenido verticalmente */
+    justify-content: flex-start; /* Centra el contenido verticalmente */
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     background-color: #ffffff; /* Fondo blanco para la tarjeta */
     border-bottom: 1px solid #eee; /* Separador sutil */
 }
@@ -56,7 +56,7 @@ html, body {
 /* Contenedor de la imagen */
 .producto-imagen {
     width: 100%;
-    /* La imagen ocupa máximo el 60% de la altura.
+    /* La imagen ocupa máximo el 40% de la altura.
       Esto deja espacio SIEMPRE para el nombre, precio y botón abajo.
     */
     max-height: 40vh;
