--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html, body {
     flex-direction: column;
     justify-content: flex-start; /* Centra el contenido verticalmente */
     align-items: center;
-    padding: 20px;
+    padding: 10vh 20px 20px 20px;
     background-color: #ffffff; /* Fondo blanco para la tarjeta */
     border-bottom: 1px solid #eee; /* Separador sutil */
 }
