--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ html, body {
     font-size: 1.5rem; /* 24px */
     font-weight: 700;
     margin-bottom: 10px;
+    text-transform: uppercase;
 }
 
 
